--- a/pom.xml
+++ b/pom.xml
@@ -26,8 +26,22 @@
             <artifactId>selenium-java</artifactId>
             <version>4.1.2</version>
         </dependency>
-
     </dependencies>
+
+    <build>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.0.0-M5</version>
+                    <configuration>
+                        <suiteXmlFiles>
+                            <suiteXmlFile>testng.xml</suiteXmlFile>
+                        </suiteXmlFiles>
+                    </configuration>
+                </plugin>
+            </plugins>
+    </build>
 
 
 </project>
